--- a/che461/IntroToControl.ipynb
+++ b/che461/IntroToControl.ipynb
@@ -526,7 +526,7 @@
    },
    "source": [
     "\\begin{equation}\n",
-    "Y=\\frac{G_d}{1+ G_cG_d}D^* + \\frac{G_p G_c}{1+ G_cG_p} Y_{sp}^*\n",
+    "Y=\\frac{G_d}{1+ G_cG_p}D^* + \\frac{G_p G_c}{1+ G_cG_p} Y_{sp}^*\n",
     "\\end{equation}"
    ]
   },
