--- a/random/LIME_example.ipynb
+++ b/random/LIME_example.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "id": "2f1494ac-4a7f-4ddf-8fcd-e9f27009e4af",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "4b2530a8-3bd2-47ba-8d2d-7c3e0dff6f16",
    "metadata": {},
    "outputs": [
@@ -122,9 +122,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Intercept -0.19061739210954654\n",
-      "Prediction_local [0.88308149]\n",
-      "Right: 0.589506623345104\n"
+      "Intercept 0.31409535100147534\n",
+      "Prediction_local [-0.60083312]\n",
+      "Right: -0.6060391099460442\n"
      ]
     }
    ],
@@ -134,17 +134,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "id": "f0e067c2-09cb-440b-af45-9cadd0b2ff56",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5897505358505253"
+       "-0.60601322542436"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "id": "35413c61-dda9-4d8b-9d3f-f618586444f9",
    "metadata": {},
    "outputs": [
@@ -37254,25 +37254,25 @@
        "/***/ })\n",
        "/******/ ]);\n",
        "//# sourceMappingURL=bundle.js.map </script></head><body>\n",
-       "        <div class=\"lime top_div\" id=\"top_divS5W4B6KWWD8C370\"></div>\n",
+       "        <div class=\"lime top_div\" id=\"top_divSCF32O5OOBKVC3M\"></div>\n",
        "        \n",
        "        <script>\n",
-       "        var top_div = d3.select('#top_divS5W4B6KWWD8C370').classed('lime top_div', true);\n",
+       "        var top_div = d3.select('#top_divSCF32O5OOBKVC3M').classed('lime top_div', true);\n",
        "        \n",
        "        \n",
        "                    var pp_div = top_div.append('div')\n",
        "                                        .classed('lime predicted_value', true);\n",
        "                    var pp_svg = pp_div.append('svg').style('width', '100%');\n",
-       "                    var pp = new lime.PredictedValue(pp_svg, 0.589506623345104, -0.7481705089539842, 1.2461239238969588);\n",
+       "                    var pp = new lime.PredictedValue(pp_svg, -0.6060391099460442, -0.7492580353541947, 1.2477783951569656);\n",
        "                    \n",
        "        var exp_div;\n",
        "            var exp = new lime.Explanation([\"negative\", \"positive\"]);\n",
        "        \n",
        "            exp_div = top_div.append('div').classed('lime explanation', true);\n",
-       "            exp.show([[\"x1 > 0.75\", 1.088609434858811], [\"0.51 < x3 <= 0.75\", -0.009067743933852599], [\"0.25 < x2 <= 0.51\", -0.005842810942912906]], 1, exp_div);\n",
+       "            exp.show([[\"x1 <= 0.24\", -0.9269714303054111], [\"x3 <= 0.25\", 0.006429834847042866], [\"x2 <= 0.25\", 0.005613123066050132]], 1, exp_div);\n",
        "            \n",
        "        var raw_div = top_div.append('div');\n",
-       "            exp.show_raw_tabular([[\"x1\", \"0.76\", 1.088609434858811], [\"x3\", \"0.52\", -0.009067743933852599], [\"x2\", \"0.31\", -0.005842810942912906]], 1, raw_div);\n",
+       "            exp.show_raw_tabular([[\"x1\", \"0.13\", -0.9269714303054111], [\"x3\", \"0.15\", 0.006429834847042866], [\"x2\", \"0.19\", 0.005613123066050132]], 1, raw_div);\n",
        "        \n",
        "        </script>\n",
        "        </body></html>"
